Full Stack Doctor Appointment Booking System using the MERN stack

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 MONGODB_URI='mongodb://localhost:27017'
-CLOUDINARY_NAME=''
-CLOUDINARY_API_KEY=''
-CLOUDINARY_SECRET_KEY=''
+CLOUDINARY_NAME='dsobyvyk1'
+CLOUDINARY_API_KEY='848494925326374'
+CLOUDINARY_SECRET_KEY='FYe2gd0ytfVegbNS4XJCxuV47As'
 ADMIN_EMAIL='admin@prescripto.com'
 ADMIN_PASSWORD='admin123'
 JWT_SECRET="greatstack"
